--- a/css/desktop__1024.css
+++ b/css/desktop__1024.css
@@ -70,7 +70,7 @@ h3, h4 {
 }
 
 .home--biography #home_text_one{
-    color: #e20c0c;
+    color: #FFFFFF;
     text-align: justify;
     font-family: Inter;
     font-size: 1.8vw;
