--- a/css/desktop__1024.css
+++ b/css/desktop__1024.css
@@ -73,12 +73,12 @@ h3, h4 {
     color: #FFFFFF;
     text-align: justify;
     font-family: Inter;
-    font-size: 1.8vw;
+    font-size: 1.6vw;
     font-style: normal;
     font-weight: 300;
     line-height: 5rem; 
     letter-spacing: 0;
-    margin-bottom: 2vh;
+    margin-bottom: 2rem;
 }
 .home--biography #home_text_two{
     color: #959595;
@@ -89,7 +89,7 @@ h3, h4 {
     font-weight: 400;
     line-height: 4rem; /* 150% */
     letter-spacing: 0;
-    margin-bottom: 5vh;
+    margin-bottom: 4rem;
 }
 
 #img-home{
@@ -151,14 +151,30 @@ h3, h4 {
     margin-bottom: 0;
 }
 
+.sonoro--info p:nth-child(2){
+    margin-bottom: 2rem;
+}
+
 .content-div iframe{
-    width: 100%;
-    height: 46.1rem;  
+    width: 100%;  
     border-radius: 10px;
+    height: 50vh;
+}
+
+.content-div--sonoro{
+    margin-bottom: 4vh;
+}
+
+#video-LCDYNE2{
+    margin-bottom: 6vh;
 }
 
 .biography{
     display: none;
+}
+
+.contact{
+    height: 100vh;
 }
 
 .contact--photo{
@@ -166,11 +182,12 @@ h3, h4 {
     /* height: 20%; */
 }
 .contact--photo img{
-    height: 50rem;
+    height: 50vh;
+    margin-bottom: 4vh;
 }
 
 .contact--content{
-    margin-top: 4rem;
+    /* margin-top: 4rem; */
 }
 
 .contact--buttons{
@@ -178,7 +195,7 @@ h3, h4 {
     justify-content: center;
     align-items: center;
     gap: 4rem;
-    margin-bottom: 4rem;
+    margin-bottom: 0;
     flex-direction: row
 }
 
@@ -186,16 +203,16 @@ h3, h4 {
     justify-content: center;
     align-items: center;
     gap: 7.2rem;
-    margin-bottom: 16rem;
+    /* margin-bottom: 16rem; */
     width: 100%;
     height: 100%;
 }
 
 #a__link--contact{
-    bottom: 0rem;
+    bottom: 0;
 }
 
-/* #contact--title h2{
-    margin-bottom: 4rem;
-} */
+#menu__link--rec{
+    width: 100%;
+}
 
