--- a/css/menu desktop.css
+++ b/css/menu desktop.css
@@ -71,7 +71,8 @@
     font-style: normal;
     font-weight: 200;
     line-height: normal;
-    letter-spacing: -0.5px; 
+    letter-spacing: -0.5px;
+    width: 100%; 
 }
 
 .menu__link:hover {
@@ -87,6 +88,14 @@
     background-color: #9D9D9D;
     width: 100%;
     
+}
+
+#menu__link--rec{
+    padding: 3rem 4.5rem;  
+}
+
+#menu__link--sonoro{
+    padding: 3rem 4.8rem;  ;
 }
 
 
