--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,3 @@
-/*
-1. Posicionamiento
-2. Modelo de caja (Box Model)
-3. Tipografia
-4. Efectos visuales
-5. Otros
-*/
-
 :root {
     --white: #FFFFFF;
     --gray: #9D9D9D;
@@ -126,13 +118,6 @@ header {
     letter-spacing: 0.75px;
 }
 
-/* .header--menu {
-    display: flex;
-    align-items: center;
-    gap: 47px;
-    margin-right: 8rem;
-} */
-
 main{
     display: flex;
     flex-direction: column;
@@ -162,15 +147,11 @@ main{
     align-items: center;
     height: 51.8rem;
     width: 100%;
-    background-image: url(/assets/imgs/mobile/prod_rec_mix.png);
+    background-image: url(/assets/imgs/mobile/prod_rec_mix.avif );
     background-size: cover;
     background-position: center;
     margin-bottom: 8.8rem;
 }
-
-/* #produ-rec--title{
-    position: relative;    
-} */
 
 #spotify{
     position: relative;   
@@ -251,7 +232,7 @@ main{
 }
 
 .biography {
-    background-image: url(/assets/imgs/mobile/micro-cel.png);
+    background-image: url(/assets/imgs/mobile/micro-cel.avif);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -269,7 +250,7 @@ main{
     font-size: 4.5vw;
     font-style: normal;
     font-weight: 200;
-    line-height: 3rem; /* 150% */
+    line-height: 3rem; 
     letter-spacing: 0.4px;
     margin: auto;
 }
@@ -327,13 +308,7 @@ main{
 }
 
 .button span{
-    /* display: inline-block; */
     margin-right: 16px;
-    /* width: 2.3rem;
-    height: 1.8rem; */
-    /* background-image: url(/assets/icons/msg_white.svg); */
-    /* background-position: 50%;
-    background-repeat: no-repeat; */
 }
 
 .contact--buttons{
@@ -450,5 +425,12 @@ main{
     .contact--icons{
         width: 50%;
     }
+
+    #nav-item1{
+        margin-top: 5vh
+      }
+      #nav-item6{
+        margin-bottom: 30vh;
+      }
 }
   
